--- a/full-react-query/package.json
+++ b/full-react-query/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^4.29.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
