--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "react-query-demos",
   "private": true,
   "scripts": {
     "build": "turbo run build",
@@ -8,10 +9,8 @@
   },
   "devDependencies": {
     "eslint": "^7.32.0",
-    "eslint-config-custom": "workspace:*",
     "prettier": "^2.5.1",
     "turbo": "latest"
   },
-  "packageManager": "pnpm@7.15.0",
-  "name": "react-query-demos"
+  "packageManager": "pnpm@7.15.0"
 }
