--- a/apps/full-react-query/package.json
+++ b/apps/full-react-query/package.json
@@ -14,7 +14,7 @@
     "@mantine/core": "^6.0.8",
     "@mantine/hooks": "^6.0.8",
     "@tabler/icons-react": "^2.17.0",
-    "@tanstack/react-query": "5.0.0-alpha.19",
+    "@tanstack/react-query": "^4.29.3",
     "mantine-react-table": "1.0.0-beta.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
