--- a/apps/full-react-query-demo/package.json
+++ b/apps/full-react-query-demo/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "react-query-demo",
+  "name": "full-react-query-demo",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 5001",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
