--- a/apps/full-react-query-demo/package.json
+++ b/apps/full-react-query-demo/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.10.6",
     "@mantine/core": "^6.0.8",
     "@mantine/hooks": "^6.0.8",
+    "@mantine/prism": "^6.0.8",
     "@tabler/icons-react": "^2.17.0",
     "@tanstack/react-query": "^4.29.3",
     "mantine-react-table": "1.0.0-beta.3",
@@ -30,6 +31,7 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "raw-loader": "^4.0.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.0"
   }
