--- a/apps/no-react-query-demo/package.json
+++ b/apps/no-react-query-demo/package.json
@@ -21,16 +21,15 @@
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
+    "@types/react": "^18.0.38",
     "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
-    "@vitejs/plugin-react": "^4.0.0-beta.0",
-    "eslint": "^8.38.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
+    "@vitejs/plugin-react": "^4.0.0",
+    "eslint": "^8.39.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "raw-loader": "^4.0.2",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.0"
+    "typescript": "^5.0.4",
+    "vite": "^4.3.1"
   }
 }
