--- a/apps/full-react-query-demo/package.json
+++ b/apps/full-react-query-demo/package.json
@@ -10,28 +10,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@mantine/core": "^6.0.9",
-    "@mantine/hooks": "^6.0.9",
-    "@mantine/prism": "^6.0.9",
-    "@tabler/icons-react": "^2.17.0",
-    "@tanstack/react-query": "^4.29.5",
-    "mantine-react-table": "1.0.0-beta.5",
+    "@emotion/react": "^11.11.1",
+    "@mantine/core": "^6.0.17",
+    "@mantine/hooks": "^6.0.17",
+    "@mantine/prism": "^6.0.17",
+    "@tabler/icons-react": "^2.28.0",
+    "@tanstack/react-query": "^4.32.0",
+    "mantine-react-table": "1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
-    "@tanstack/react-query-devtools": "^4.29.5",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.1",
-    "@typescript-eslint/parser": "^5.59.1",
-    "@vitejs/plugin-react": "^4.0.0",
-    "eslint": "^8.39.0",
+    "@tanstack/react-query-devtools": "^4.32.0",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.1.0",
+    "@typescript-eslint/parser": "^6.1.0",
+    "@vitejs/plugin-react": "^4.0.3",
+    "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "typescript": "^5.0.4",
-    "vite": "^4.3.1"
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "typescript": "^5.1.6",
+    "vite": "^4.4.6"
   }
 }
